SOLR-11947: Continued work on math expressions documentation.

--- a/solr/solr-ref-guide/src/math-expressions.adoc
+++ b/solr/solr-ref-guide/src/math-expressions.adoc
@@ -35,7 +35,9 @@ record in your Solr Cloud cluster computable.
 
 == <<variables.adoc, Variables>>
 
-== <<matrix-math.adoc, Matrices and Matrix Math>>
+== <<matrix-math.adoc, Matrix Math>>
+
+== <<vectorization.adoc, Vectorization>>
 
 == <<statistics.adoc, Statistics>>
 
