--- a/solr/solr-ref-guide/src/variables.adoc
+++ b/solr/solr-ref-guide/src/variables.adoc
@@ -19,7 +19,7 @@
 == The Let Expressions
 
 The `let` expression sets variables and and by default returns
-the last variable. The output of any math expression can be set
+the last variable. The output of any streaming expression can be set
 to a variable.
 
 Below is a simple example setting three variables `a`, `b`
@@ -144,126 +144,3 @@ responds with:
 }
 ----
 
-== Assigning Streams to Variables
-
-Streaming expressions can also be used inside of a `let` expression
-in the following ways:
-
-* A variable can be set to the output of any streaming expression.
-* A streaming expression can be executed after all variables have been set. The variables can then be referenced by the streaming expression that is executed. The `let` expression will stream the tuples that are emitted by the final streaming expression.
-
-Here is a very simple example:
-
-[source,text]
-----
-let(a=random(collection2, q="*:*", rows="3", fl="price_f"),
-    b=random(collection2, q="*:*", rows="3", fl="price_f"),
-    tuple(sample1=a, sample2=b))
-----
-
-The `let` expression above is setting variables `a` and `b` to random
-samples taken from collection2.
-
-The `let` function then executes the `tuple` streaming expression
-which references the two variables.
-
-Here is the output:
-
-[source,json]
-----
-{
-  "result-set": {
-    "docs": [
-      {
-        "sample1": [
-          {
-            "price_f": 0.39729273
-          },
-          {
-            "price_f": 0.063344836
-          },
-          {
-            "price_f": 0.42020327
-          }
-        ],
-        "sample2": [
-          {
-            "price_f": 0.659244
-          },
-          {
-            "price_f": 0.58797807
-          },
-          {
-            "price_f": 0.57520163
-          }
-        ]
-      },
-      {
-        "EOF": true,
-        "RESPONSE_TIME": 20
-      }
-    ]
-  }
-}
-----
-
-== Creating Arrays with the *col* Function
-
-The `col` function is used to move a column of numbers from a list of
-tuples into an `array`.
-
-This is an important function because streaming expressions such as `sql`,
-`random` and `timeseries` return tuples, but the
-math expressions often operate on arrays or matrices.
-
-Below is an example of the `col` function:
-
-[source,text]
-----
-let(a=random(collection2, q="*:*", rows="3", fl="price_f"),
-    b=random(collection2, q="*:*", rows="3", fl="price_f"),
-    c=col(a, price_f),
-    d=col(b, price_f),
-    tuple(sample1=c, sample2=d))
-----
-
-The example above is using the `col` function to create arrays
-from the tuples stored in variables `a` and `b`.
-
-Variable `c` contains an array of values from the `price_f` field,
-taken from the tuples stored in variable `a`.
-
-Variable `d` contains an array of values from the `price_f` field,
-taken from the tuples stored in variable `b`.
-
-Also notice inn that the response `tuple` executed by `let` is pointing
-to the arrays in variables `c` and `d`.
-
-The response shows the arrays:
-
-[source,json]
-----
-
-{
-  "result-set": {
-    "docs": [
-      {
-        "sample1": [
-          0.06490427,
-          0.6751543,
-          0.07063508
-        ],
-        "sample2": [
-          0.8884564,
-          0.8878821,
-          0.3504665
-        ]
-      },
-      {
-        "EOF": true,
-        "RESPONSE_TIME": 17
-      }
-    ]
-  }
-}
-----
