--- a/solr/solr-ref-guide/src/regression.adoc
+++ b/solr/solr-ref-guide/src/regression.adoc
@@ -17,7 +17,10 @@
 // under the License.
 
 
-== Regression and Prediction
+The math expressions library includes multiple implementations of linear and non-linear
+regression and curve fitting.
+
+
 
 == Simple Linear Regression
 
