SOLR-11947: WIP term vectors

--- a/solr/solr-ref-guide/src/math-expressions.adoc
+++ b/solr/solr-ref-guide/src/math-expressions.adoc
@@ -39,6 +39,8 @@ record in your Solr Cloud cluster computable.
 
 == link:vectorization.adoc[Streams and Vectorization]
 
+== link:term-vectors.adoc[Text Analysis and Term Vectors]
+
 == link:statistics.adoc[Statistics]
 
 == link:probability.adoc[Probability and Simulations]
