SOLR-11947: Add curve fitting to TOC

--- a/solr/solr-ref-guide/src/math-expressions.adoc
+++ b/solr/solr-ref-guide/src/math-expressions.adoc
@@ -49,6 +49,8 @@ record in your Solr Cloud cluster computable.
 
 == link:regression.adoc[Linear Regression]
 
+== link:curve-fitting.adoc[Curve Fitting]
+
 == link:numerical-analysis.adoc[Interpolation, Derivatives and Integrals]
 
 == link:machine-learning.adoc[Machine Learning]
